2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsWidgets.py (LinkLabel.__init__): Set cursor to HAND1.

2006-05-17  Stefan Bjork  <betula@users.sourceforge.net>
	* po/sv.po: Imported from CVS and merged with gramps.pot.

2006-05-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/glade/gramps.glade, 
	* src/TipOfDay.py: Use a gtk.Window instead of a Dialog to work
	around the "Button not clickable again" gtk-bug. (closes #0000033)

2006-05-16  Alex Roitman  <shura@gramps-project.org>
	* src/glade/gramps.glade (select_person): Name the box.
	* src/DataViews/_MediaView.py (row_change): Collect garbage on the
	row change.
	* src/Editors/_EditLdsOrd.py: Adapt to new selector.
	* src/DisplayTabs/_SourceEmbedList.py: Adapt to new selector.
	* src/DisplayTabs/_EventEmbedList.py: Adapt to new selector.
	* src/DisplayTabs/_GalleryTab.py: Adapt to new selector.
	* src/Selectors/_BaseSelector.py: Use DisplaModel models;
	(_local_init): Add selector-specific hook.
	* src/Selectors/_SelectRepository.py: Use DisplaModel models.
	* src/Selectors/_SelectSource.py: Use DisplaModel models.
	* src/Selectors/_SelectEvent.py: Use DisplaModel models.
	* src/Selectors/_SelectFamily.py: Use DisplaModel models.
	* src/Selectors/_SelectPlace.py: Use DisplaModel models.
	* src/Selectors/_SelectObject.py: Use DisplaModel models.
	(_local_init): Set up preview; 
	(_row_change): Show preview; collect garbage.

2006-05-16  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditEvent.py: start of SelectPlace integration
	* src/glade/gramps.glade: start of SelectPlace integration
	* src/GrampsWidgets.py: start of SelectPlace integration
	* src/DisplayTabs/_WebEmbedList.py: icon fixes
	* src/images/stock_insert-url.png: added
	* src/images/person.png: added
	* src/images/relation.png: added
	* src/images/Makefile.am: added new images
	* src/gramps_main.py: register icons as stock
	* src/GrampsDb/_ReadGedcom.py: handle blank lines
